feat: ✨ Updated to 1.18.2